# short-term-qt-project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.qtds  LICENSE  README.en.md  README.md  README_EN.md  README_JP.md  README_LZH.md  aboutmod.cpp  aboutmod.h  aiagent.cpp  aiagent.h  appicon.rc  day.db  daymod.cpp  daymod.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mem.db  memmod.cpp  memmod.h  resources.qrc  saying.cpp  settingmod.cpp  settingmod.h  sqlitemod.cpp  sqlitemod.h  temperaturechart.h  uisetting.cpp  uisetting.h  weathermod.cpp  weathermod.h
.cache/clangd/index/: daymod.cpp.C90EF8C348925F63.idx  daymod.h.3452D1614CACB8EA.idx  main.cpp.35E019AF9DBAF8DA.idx  mainwindow.cpp.DDAB8C8A67C44A64.idx  mainwindow.h.886C10DF2EA200F0.idx  memmod.cpp.926F4F05A8B7E635.idx  memmod.h.F490D533331094D3.idx  saying.cpp.1856589169BA5461.idx  saying.h.41099EBE9D11B1D8.idx  settingmod.cpp.056E71A3D003B0D0.idx  settingmod.h.180386BBEE8E7CDB.idx  temperaturechart.cpp.A23333617C9C3DDE.idx  temperaturechart.h.948722F1490488FC.idx  weathermod.cpp.BDF691F87A0E6251.idx  weathermod.h.9832F953BCFA9351.idx
docs/: Qt智能桌面助理系统_开发文档.docx  Qt智能桌面助理系统_用户手册.docx
i18n/: translations.qrc
include/: aiagent.h  daymod.h  mainwindow.h  mainwindow.ui  memmod.h  saying.h  settingmod.h  weathermod.h
src/: aiagent.cpp  daymod.cpp  mainwindow.cpp  memmod.cpp  saying.cpp  temperaturechart.cpp  weathermod.cpp
style/: light_styles.qss  styles.qss
